--- a/src/main/webapp/WEB-INF/view/admin/tests/edit.html
+++ b/src/main/webapp/WEB-INF/view/admin/tests/edit.html
@@ -258,7 +258,7 @@
         <div class="form-row align-items-center">
             <div class="col-12" style="margin-top: .5rem">
                 <button type="submit" class="btn btn-light border border-dark" style="width: 30%; min-width: 7.5rem" id="submitBtn"
-                        onclick="trimInputs('title', 'problemText', 'gradePoints', 'minusPoints', 'minPoints')">
+                        onclick="trimInputs('title', 'problemText', 'minusPoints')">
                     Сохранить
                 </button>
             </div>
