Viewfix for barsic

--- a/src/main/webapp/WEB-INF/view/admin/models/preview.html
+++ b/src/main/webapp/WEB-INF/view/admin/models/preview.html
@@ -32,7 +32,7 @@
   Предпросмотр модели
 </p>
 
-<div class="container" style="min-width: 38rem">
+<div class="container" style="min-width: 38rem; padding: 0; margin: auto; max-width: 1140px">
   <!--/*@thymesVar id="model" type="ru.spbu.distolymp.dto.admin.models.ModelViewDto"*/-->
   <div style="border-color: black; border-width: 1px; border-style: solid">
     <div style="margin: .5rem; overflow-wrap: anywhere; overflow: auto">
